# swai

./: .gitignore  app.py  main.ipynb  main.py  pyproject.toml  servertest.py  train.tsv
dataset/: test.tsv  validated.tsv
models/: model_test.py
utils/: clean.py  get_tts.py  getwhisper.py  schemas.py
